Refactor OrganizationAuthenticator to extend OpenIDConnectAuthenticator and enhance tenant handling